welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: not found: value tailleTableau
  tailleTableau = getMondeHAuteur()
  ^Array1:4: error: not found: value tableau
  tableau = new Array[Color](tailleTableau)
  ^Array1:5: error: not found: value tailleTableau
  for (pas <-0 to tailleTableau-1){
                  ^Array1:6: error: not found: value tableau
    tableau(pas)=getCouleurSol()
    ^Array1:19: error: not found: value tailleTableau
  for(pas <-0 to tailleTableau -1){
                 ^Array1:20: error: not found: value tableau
    setCouleurBrosse(tableau(pas))
                     ^